@@ -1,3 +1,12 @@
+2012-05-01  Jérôme Pasquier  <rainbru@free.fr>
+
+	* src/tools/log_reader.rb: fix a bug preventing main window to appear.
+
+	* src/LoggerOutputYaml.cpp: many output functinos now use the
+	escape macro.
+	* src/LoggerOutputYaml.cpp (_e): created a simple shortcut macro to
+	Rpg::LoggerOutputYaml::escape().
+
 2012-04-30  Jérôme Pasquier  <rainbru@free.fr>
 
 	* src/LoggerOutputYaml.cpp: uses ObjectInspector accessors.
